--- a/index.html
+++ b/index.html
@@ -2,32 +2,36 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>miniSlider - jQuery Plugin</title>
-    <link rel="stylesheet" href="css/site.css">
-    <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <meta charset="utf-8">
+  <title>miniSlider - jQuery Plugin</title>
+  <link rel="stylesheet" href="css/site.css">
+  <!--[if IE]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
 
 <body>
 
 <div id="container">
-    <header>
-        <h1><strong>miniSlider demo</strong> - jQuery Plugin</h1>
-    </header>
+  <header>
+      <h1><strong>miniSlider demo</strong> - jQuery Plugin</h1>
+  </header>
 
-    <div id="main">
-        
-    </div>
+  <div id="main">
+      
+  </div>
 
-    <footer>
-    </footer>
+  <footer>
+  </footer>
 </div>
 <!-- end of #container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.js"></script>
 <script src="js/miniSlider.jquery.js"></script>
-<script src="js/script.js"></script>
+<script>
+  $(function() {
+    $('#main').miniSlider();
+  });
+</script>
 
 </body>
 </html>
