Add basic html masrkup and styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
   </header>
 
   <div id="main">
-      
+    <div class="mini-slider">
+      <div>
+        <h2>Slide 1</h2>
+      </div>
+      <div>
+        <h2>Slide 2</h2>
+      </div>
+      <div>
+        <h2>Slide 3</h2>
+      </div>
+      <div>
+        <h2>Slide 4</h2>
+      </div>
+    </ul>
   </div>
 
   <footer>
