Rename .mini-slider to #slider so it's simpler

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <div id="main">
-    <div class="mini-slider">
+    <div id="slider">
       <div>
         <h2>Slide 1</h2>
       </div>
@@ -38,11 +38,11 @@
   </footer>
 </div>
 <!-- end of #container -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
 <script src="js/miniSlider.jquery.js"></script>
 <script>
   $(function() {
-    $('#main').miniSlider();
+    $('#slider').miniSlider();
   });
 </script>
 
