Add pagination styling

--- a/index.html
+++ b/index.html
@@ -19,18 +19,34 @@
 
   <div id="main">
     <div id="slider">
-      <div>
-        <h2>Slide 1</h2>
-      </div>
-      <div>
-        <h2>Slide 2</h2>
-      </div>
-      <div>
-        <h2>Slide 3</h2>
-      </div>
-      <div>
-        <h2>Slide 4</h2>
-      </div>
+      <figure>
+        <img src="images/mini-slider-1.jpg" width="958" height="300" />
+        <figcaption>
+          <h2>Landscape 1</h2>
+          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="images/mini-slider-1.jpg" width="958" height="300" />
+        <figcaption>
+          <h2>Slide 2</h2>
+          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="images/mini-slider-1.jpg" width="958" height="300" />
+        <figcaption>
+          <h2>Slide 3</h2>
+          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="images/mini-slider-1.jpg" width="958" height="300" />
+        <figcaption>
+          <h2>Slide 4</h2>
+          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+        </figcaption>
+      </figure>
     </ul>
   </div>
 
