--- a/index.html
+++ b/index.html
@@ -18,38 +18,39 @@
   </header>
 
   <div id="main">
-    <div id="slider">
-      <figure>
-        <img src="images/mini-slider-1.jpg" width="958" height="300" />
-        <figcaption>
-          <h2>Landscape 1</h2>
-          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <img src="images/mini-slider-1.jpg" width="958" height="300" />
-        <figcaption>
-          <h2>Slide 2</h2>
-          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <img src="images/mini-slider-1.jpg" width="958" height="300" />
-        <figcaption>
-          <h2>Slide 3</h2>
-          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <img src="images/mini-slider-1.jpg" width="958" height="300" />
-        <figcaption>
-          <h2>Slide 4</h2>
-          <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
-        </figcaption>
-      </figure>
-    </ul>
+    <div id="main-inner">
+      <div id="slider">
+        <figure>
+          <img src="images/mini-slider-1.jpg" width="958" height="298" />
+          <figcaption>
+            <h2>Landscape 1</h2>
+            <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="images/mini-slider-1.jpg" width="958" height="298" />
+          <figcaption>
+            <h2>Slide 2</h2>
+            <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="images/mini-slider-1.jpg" width="958" height="298" />
+          <figcaption>
+            <h2>Slide 3</h2>
+            <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="images/mini-slider-1.jpg" width="958" height="298" />
+          <figcaption>
+            <h2>Slide 4</h2>
+            <p>This photo was taken on November 19, 2011 in Awhitu, Waikato, NZ.</p>
+          </figcaption>
+        </figure>
+      </ul>
+    </div>
   </div>
-
   <footer>
   </footer>
 </div>
