--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </div>
 <!-- end of #container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
-<script src="js/miniSlider.jquery.js"></script>
+<script src="js/miniSlider.js"></script>
 <script>
   $(function() {
     $('#slider').miniSlider();
