Add TDD toolkit

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </footer>
 </div>
 <!-- end of #container -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
+<script src="js/libs/jquery.min.js"></script>
 <script src="js/miniSlider.js"></script>
 <script>
   $(function() {
