--- a/spec/javascripts/fixtures/fragment.html
+++ b/spec/javascripts/fixtures/fragment.html
@@ -1,31 +1,6 @@
 <div id="slider">
-  <figure>
-    <img src="images/mini-slider-1.jpg" width="958" height="298" />
-    <figcaption>
-      <h2>Slide 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </figcaption>
-  </figure>
-  <figure>
-    <img src="images/mini-slider-2.jpg" width="958" height="298" />
-    <figcaption>
-      <h2>Slide 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </figcaption>
-  </figure>
-  <figure>
-    <img src="images/mini-slider-3.jpg" width="958" height="298" />
-    <figcaption>
-      <h2>Slide 3</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </figcaption>
-  </figure>
-  <figure>
-    <img src="images/mini-slider-4.jpg" width="958" height="298" />
-    <figcaption>
-      <h2>Slide 4</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </figcaption>
-  </figure>
-</ul>
+  <p>some text</p>
+  <p>some text</p>
+  <p>some text</p>
+  <p>some text</p>
 </div>
